--- a/hats19to21.ipynb
+++ b/hats19to21.ipynb
@@ -28,6 +28,7 @@
     "\n",
     "- numpy (http://www.numpy.org/)\n",
     "- scipy (http://scipy.org/scipylib/index.html)\n",
+    "- pyfits (or astropy.fits)\n",
     "- matplotlib (http://matplotlib.org/)\n",
     "- Jupyter and IPython (http://ipython.org/)\n",
     "- scikit-learn (http://www.scikit-learn.org)\n",
