updated README and list of data files

--- a/hats19to21.ipynb
+++ b/hats19to21.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "- numpy (http://www.numpy.org/)\n",
     "- scipy (http://scipy.org/scipylib/index.html)\n",
-    "- pyfits (or astropy.fits)\n",
+    "- pyfits (or astropy.fits; http://www.stsci.edu/institute/software_hardware/pyfits)\n",
     "- matplotlib (http://matplotlib.org/)\n",
     "- Jupyter and IPython (http://ipython.org/)\n",
     "- scikit-learn (http://www.scikit-learn.org)\n",
@@ -50,9 +50,19 @@
     "The following data files should be included along with this repository:\n",
     "\n",
     "- `planet-mass-radius-with-errors.csv`: CSV file containing transiting planet info from http://exoplanets.org, last updated on 2016-04-12.\n",
+    "\n",
     "- `HATS-19b-hatlc.csv.gz`: the HATSouth light curve for HATS-19b.\n",
     "- `HATS-20b-old-hatlc.csv.gz`: the HATSouth light curve for HATS-20b.\n",
     "- `HATS-21b-old-hatlc.csv.gz`: the HATSouth light curve for HATS-21b.\n",
+    "\n",
+    "- `HATS-19b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
+    "- `HATS-20b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
+    "- `HATS-21b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
+    "\n",
+    "- `HATS-19-astraluxsur-bestframe.fits`: the best combined frame from Astra Lux Sur lucky imagi\n",
+    "- `HATS-20b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
+    "- `HATS-21b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
+    "\n",
     "\n",
     "## Python imports and setup"
    ]
