--- a/hats19to21.ipynb
+++ b/hats19to21.ipynb
@@ -51,17 +51,19 @@
     "\n",
     "- `planet-mass-radius-with-errors.csv`: CSV file containing transiting planet info from http://exoplanets.org, last updated on 2016-04-12.\n",
     "\n",
+    "\n",
     "- `HATS-19b-hatlc.csv.gz`: the HATSouth light curve for HATS-19b.\n",
     "- `HATS-20b-old-hatlc.csv.gz`: the HATSouth light curve for HATS-20b.\n",
     "- `HATS-21b-old-hatlc.csv.gz`: the HATSouth light curve for HATS-21b.\n",
     "\n",
-    "- `HATS-19b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
-    "- `HATS-20b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
-    "- `HATS-21b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
     "\n",
-    "- `HATS-19-astraluxsur-bestframe.fits`: the best combined frame from Astra Lux Sur lucky imagi\n",
-    "- `HATS-20b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
-    "- `HATS-21b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
+    "- `HATS-19b-RVs.txt`: radial velocities and bisector spans for HATS-19b\n",
+    "- `HATS-20b-RVs.txt`: radial velocities and bisector spans for HATS-20b\n",
+    "- `HATS-21b-RVs.txt`: radial velocities and bisector spans for HATS-21b\n",
+    "\n",
+    "\n",
+    "- `HATS-19-astraluxsur-bestframe.fits`: the best combined frame from Astra Lux Sur lucky imaging camera for HATS-19\n",
+    "- `HATS-20-astraluxsur-bestframe.fits`: the best combined frame from Astra Lux Sur lucky imaging camera for HATS-20\n",
     "\n",
     "\n",
     "## Python imports and setup"
