minor README and notebook header fix

--- a/hats19to21.ipynb
+++ b/hats19to21.ipynb
@@ -66,6 +66,10 @@
     "- `HATS-20-astraluxsur-bestframe.fits`: the best combined frame from Astra Lux Sur lucky imaging camera for HATS-20\n",
     "\n",
     "\n",
+    "- `HATS-19-astraluxsur-contrastcurve.txt`: the 5-sigma contrast curve for HATS-19\n",
+    "- `HATS-20-astraluxsur-contrastcurve.txt`: the 5-sigma contrast curve for HATS-20\n",
+    "\n",
+    "\n",
     "## Python imports and setup"
    ]
   },
